burguer menu fixed width (pc was too wide)

--- a/src/styles/burger-menu.css
+++ b/src/styles/burger-menu.css
@@ -35,7 +35,7 @@
 
 #burger-menu {
     background-color: white;
-    width: 70vw;
+    width: 250px;
     height: 100vh;
     position: fixed;
     top: 0;
